Revert bug fixing of Firefox hidden cursor on Text widget. 1. Leave this bug to Firefox 2.1+ 2. Or make a complicate hack so that scrollbar of Text widget is shown correctly

--- a/trunk/sources/net.sf.j2s.java.org.eclipse.swt/src/org/eclipse/swt/widgets/Text.css
+++ b/trunk/sources/net.sf.j2s.java.org.eclipse.swt/src/org/eclipse/swt/widgets/Text.css
@@ -8,8 +8,6 @@
 	font-family:Tahoma, Arial, sans-serif;
 	font-size:8pt;
 	/*white-space:nowrap;*/
-	overflow-y:auto;
-	overflow-x:hidden;
 }
 .text-default textarea {
 	border-style:none;
